# data-science-portfolio-2

./: .gitignore  README.md  app.py  censorship.ipynb  journal.md  outline.md  predict_customer_churn.ipynb  premier_league.ipynb  pyproject.toml  sentiment_classification.ipynb  stock_trading.ipynb  tic_tac_toe.ipynb
data/: aapl_daily.csv
templates/: index.html
