[project]
name = "data-science2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.2",
    "atproto>=0.0.65",
    "flask>=3.1.3",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
